// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-Button23456"
  >
    <button
      class="ant-btn ant-btn-default"
      id="Button23456"
      type="button"
    >
      <span>
        Button23456
      </span>
    </button>
  </div>
</div>
`;

exports[`Disabled Col 1`] = `
<div>
  <div
    class="emotion-0"
    id="bl-Disabled Col23456"
  >
    <input
      class="ant-input"
      id="Disabled Col23456"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input 1`] = `
<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-Input23456"
  >
    <input
      class="ant-input"
      id="Input23456"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input 2`] = `
<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
    id="bl-Input23456"
  >
    <input
      class="ant-input"
      id="Input23456"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Paragraph span: 12 1`] = `
<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
    id="bl-Paragraph span: 1223456"
  >
    <div
      id="Paragraph span: 1223456"
    >
      Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Paragraph style 1`] = `
.emotion-0 {
  background: white;
  border-radius: 20px;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-Paragraph style23456"
  >
    <div
      id="Paragraph style23456"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;
